// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Button interface testing isPressed() props.pressed is false 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing isPressed() props.pressed is true 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing press() 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing press() 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing pressUp() 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing pressUp() 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing setActive(false) 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing setActive(false) 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing setActive(true) 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing setActive(true) 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing togglePressed() 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing togglePressed() 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing togglePressed() set to pressed=false 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button interface testing togglePressed() set to pressed=false 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID_BTN"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="IFC BUTTON TESTING"
    />
  </span>
</button>
`;
